<resources>
    <string name="app_name">Color Memory</string>
    <string name="action_sign_in_short">Inscription</string>
    <string name="email">Email</string>
    <string name="minimum_password">Le mot de passe est trop court, il faut au moins 6 caractères !</string>
    <string name="auth_failed">Connexion échouée, vérifiez votre mail et mot de passe et réessayez.</string>
    <string name="change_email">Changer de mail</string>
    <string name="change_password">Changer de mot de passe</string>
    <string name="send_password_reset_email">Recupérer mon mot de passe</string>
    <string name="remove_user">Supprimer le compte</string>
    <string name="new_pass">Nouveau mot de passe</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Inscription</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Mot de passe</string>
    <string name="hint_name">Nom</string>
    <string name="btn_login">Connexion</string>
    <string name="prompt_password">Entrez votre mot de passe</string>
    <string name="btn_link_to_register">Pas encore membre ? Inscris toi maintenant !</string>
    <string name="btn_link_to_login">Je suis déjà inscris, me connecter !</string>
    <string name="title_activity_reset_password">ChangerMotDePasse</string>
    <string name="btn_forgot_password">Mot de passe oublié ?</string>
    <string name="btn_reset_password">Changer de mot de passe</string>
    <string name="btn_back"><![CDATA[<< RETOUR]]></string>
    <string name="hint_new_email">Nouveau mail</string>
    <string name="btn_change">Changer</string>
    <string name="btn_send">Envoyer</string>
    <string name="btn_remove">Retirer</string>
    <string name="btn_sign_out">Deconnexion</string>
    <string name="lbl_forgot_password">Mot de passe oublié ?</string>
    <string name="forgot_password_msg">Il nous faut votre adresse mail pour envoyer les instructions de récupération.</string>
    <string name="email_id">Email ID</string>
</resources>