<?xml version="1.0" encoding="utf-8"?><RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"    xmlns:tools="http://schemas.android.com/tools"    android:layout_width="match_parent"    android:layout_height="match_parent"    tools:context=".Lancement"    android:background="@drawable/fond">    <LinearLayout        android:layout_width="match_parent"        android:layout_height="50dp"        android:orientation="horizontal"        android:weightSum="10">        <TextView            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:layout_weight="9"            android:visibility="invisible"/>        <Button            android:id="@+id/test"            android:layout_width="wrap_content"            android:layout_height="match_parent"            android:layout_gravity="right"            android:layout_weight="1"            android:text="TEST"            android:background="@drawable/custom_bleu"            android:visibility="invisible"/>    </LinearLayout>    <LinearLayout        android:layout_width="match_parent"        android:layout_height="450dp"        android:layout_centerVertical="true"        android:orientation="horizontal">        <include            layout="@layout/activity_lancement"            android:layout_width="match_parent"            android:layout_height="match_parent"            android:layout_marginBottom="100dp"/>    </LinearLayout>    <EditText        android:id="@+id/old_email"        android:layout_width="368dp"        android:layout_height="wrap_content"        android:hint="@string/hint_email"        android:inputType="textEmailAddress"        android:maxLines="1"        tools:layout_editor_absoluteY="82dp"        tools:layout_editor_absoluteX="8dp"        android:layout_above="@+id/password"        android:layout_centerHorizontal="true"        android:layout_marginBottom="17dp" />    <EditText        android:id="@+id/password"        android:layout_width="400dp"        android:layout_height="wrap_content"        android:focusableInTouchMode="true"        android:hint="@string/prompt_password"        android:imeActionId="@+id/login"        android:imeOptions="actionUnspecified"        android:inputType="textPassword"        android:maxLines="1"        tools:layout_editor_absoluteX="126dp"        tools:layout_editor_absoluteY="125dp"        android:layout_above="@+id/newPassword"        android:layout_toRightOf="@+id/progressBar" />    <EditText        android:id="@+id/newPassword"        android:layout_width="400dp"        android:layout_height="wrap_content"        android:focusableInTouchMode="true"        android:hint="@string/new_pass"        android:imeActionId="@+id/login"        android:imeOptions="actionUnspecified"        android:inputType="textPassword"        android:maxLines="1"        tools:layout_editor_absoluteX="106dp"        tools:layout_editor_absoluteY="168dp"        android:layout_above="@+id/changePass"        android:layout_alignParentLeft="true" />    <Button        android:id="@+id/changePass"        style="?android:textAppearanceSmall"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:background="@color/colorPrimaryDark"        android:text="@string/btn_change"        android:textColor="@android:color/white"        android:textStyle="bold"        tools:layout_editor_absoluteY="211dp"        tools:layout_editor_absoluteX="199dp"        android:layout_above="@+id/remove"        android:layout_centerHorizontal="true" />    <ProgressBar        android:id="@+id/progressBar"        android:layout_width="0dp"        android:layout_height="0dp"        android:visibility="gone"        tools:layout_editor_absoluteY="0dp"        tools:layout_editor_absoluteX="0dp" />    <Button        android:id="@+id/remove"        style="?android:textAppearanceSmall"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:background="@color/colorPrimaryDark"        android:text="@string/btn_remove"        android:textColor="@android:color/white"        android:textStyle="bold"        tools:layout_editor_absoluteY="259dp"        tools:layout_editor_absoluteX="199dp"        android:layout_above="@+id/change_password_button"        android:layout_alignLeft="@+id/changePass" />    <Button        android:id="@+id/change_password_button"        style="?android:textAppearanceSmall"        android:layout_width="300dp"        android:layout_height="wrap_content"        android:text="@string/change_password"        android:textStyle="bold"        tools:layout_editor_absoluteX="42dp"        tools:layout_editor_absoluteY="312dp"        android:layout_above="@+id/remove_user_button"        android:layout_alignLeft="@+id/remove_user_button"        android:background="#fff"/>    <Button        android:id="@+id/remove_user_button"        style="?android:textAppearanceSmall"        android:layout_width="300dp"        android:layout_height="wrap_content"        android:text="@string/remove_user"        android:textStyle="bold"        tools:layout_editor_absoluteX="42dp"        tools:layout_editor_absoluteY="408dp"        android:layout_above="@+id/sign_out"        android:layout_alignLeft="@+id/sign_out"        android:background="#eee"/>    <Button        android:id="@+id/sign_out"        style="?android:textAppearanceSmall"        android:layout_width="300dp"        android:layout_height="wrap_content"        android:background="@color/colorPrimary"        android:text="@string/btn_sign_out"        android:textColor="@android:color/white"        android:textStyle="bold"        tools:layout_editor_absoluteX="42dp"        tools:layout_editor_absoluteY="456dp"        android:layout_alignParentBottom="true"        android:layout_centerHorizontal="true" />    <TextView        android:id="@+id/useremail"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:layout_alignParentTop="true"        android:layout_marginBottom="16dp"        android:hint="@string/email_id"        android:textSize="16dp"/>    <TextView        android:id="@+id/score"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:layout_below="@+id/useremail"        android:layout_marginBottom="16dp"        android:hint=""        android:textSize="16dp"/></RelativeLayout>